--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -5,7 +6,11 @@
 <title>Katherine Sullivan</title>
 </head>
 <body>
-Hello World!
+My name is Katherine Sullivan and I am a junior at Point Park Univeristy.  I am also a member of a club called ITSO.
+A way to contact me is by email and it is; (ksulli@pointpark.edu).
+<h3>This is Me.</h3>
+<img src="prom2015-13.jpg" height="250" width="200">
+
+
 </body>
 </html>
-
