--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 My name is Katherine Sullivan and I am a junior at Point Park Univeristy.  I am also a member of a club called ITSO.
-A way to contact me is by email and it is; (ksulli@pointpark.edu).
+A way to contact me is by email; <a href="mailto:ksulli@pointpark.edu?subject = Introduction&body = message">Click here.</a>.
 <h3>This is Me.</h3>
 <img src="prom2015-13.jpg" height="250" width="200">
 
