--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
 <head>
 <meta charset="utf-8">
 <title>Katherine Sullivan</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-My name is Katherine Sullivan and I am a junior at Point Park Univeristy.  I am also a member of a club called ITSO.
-A way to contact me is by email; <a href="mailto:ksulli@pointpark.edu?subject = Introduction&body = message">Click here.</a>.
+  <div class="scrollmenu">
+  <a href="mailto:ksulli@pointpark.edu?subject = Introduction&body = message">Contact</a>
+  <a href="#about">About</a>
+  ...
+</div>
+
+<h1>My name is Katherine Sullivan and I am a junior at Point Park Univeristy.  I am also a member of a club called ITSO.</h1>
+<p>
+I am a dancer, a swimmmer and i do other things when not doing school.
+</p>
 <h3>This is Me.</h3>
 <img src="prom2015-13.jpg" height="250" width="200">
+<div>
+  <table style="width:50%">
+    <tr>
+      <th>Katherine</th>
+      <th>Sullivan</th>
+      <th>21</th>
+    </tr>
 
+  </table>
+</div>
 
 </body>
 </html>
